# email-triage-env

./: ._codebase_digest.txt  .gitignore  Dockerfile  LICENSE  README.md  baseline.py  client.py  inference.py  openenv.yaml  pyproject.toml  test_with_ollama.py
outputs/evals/: baseline_results.json
server/: app.py  baseline_heuristic.py  data.py  environment.py  models.py
tests/: test_environment.py
